src/kong/kong-ingress-sample.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-sample-ingress
  namespace: kong
  annotations:
    konghq.com/strip-path: 'true'
spec:
  ingressClassName: kong
  rules:
    - host: kong.example
      http:
        paths:
          - path: /sample
            pathType: ImplementationSpecific
            backend:
              service:
                name: sample-echo-service
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: echo
  name: sample-echo-service
  namespace: kong
spec:
  ports:
    - port: 8080
      name: high
      protocol: TCP
      targetPort: 8080
    - port: 80
      name: low
      protocol: TCP
      targetPort: 8080
  selector:
    app: echo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: echo
  name: sample-echo-deployment
  namespace: kong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: echo
    spec:
      containers:
        - image: gcr.io/kubernetes-e2e-test-images/echoserver:2.2
          name: echo
          ports:
            - containerPort: 8080
          resources: {}

# curl -i http://{INGRESS_RULE_HOST}/{INGRESS_RULE_PATH} --resolve {INGRESS_RULE_HOST}:{INGRESS_SVC_PORT}:{INGRESS_SVC_IP}
# curl -i http://kong.example/sample --resolve kong.example:80:192.168.52.21
# /etc/hosts를 변경하여 ip에 도메인 주소를 매핑하고, 도메인 주소에 요청을 보내보면 kong proxy는 해당 요청을 읽고 header의 domain으로 service를 결정하여 요청을 분산한다.
